--- a/kompliziert/src/main/AndroidManifest.xml
+++ b/kompliziert/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="info.fitapp.kompliziert">
-    <application android:label="@string/app_name"
-                 android:theme="@style/AppTheme"/>
+    <application android:label="@string/app_name"/>
 </manifest>
